<resources>
    <string name="app_name">Masinqo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="previous">Previous song</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Next song</string>
    <string name="song_title">Song Title</string>
    <string name="artist_name">Artist Name</string>
    <string name="album_art">Album art</string>
    <string name="song_name">Song Name</string>
    <string name="duration_placeholder">0:00</string>
    <string name="repeat">Repeat songs</string>
    <string name="shuffle">Shuffle songs</string>
    <string name="queue_list">Queue list</string>
    <string name="album_name">Album name</string>
    <string name="album_size_default">N/A</string>
    <string name="albums"># albums</string>
    <string name="songs"># Songs</string>
    <string name="genres">genres</string>
    <string name="genre">Genre</string>
    <string name="btn_queue_list">btn_queue_list</string>
    <string name="up_next">Up Next</string>
    <string name="blurred_background">blurred background</string>
    <string name="btn_lyrics">btn_lyrics</string>
    <string name="lyrics_not_found">Lyrics not found</string>
    <string name="lyrics">Lyrics</string>
    <string name="song_more_options">song more options</string>
    <string name="play_next">Play Next</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="remove_from_queue">Remove from queue</string>
    <string name="play">Play</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="add_playlist">Add Playlist</string>
    <plurals name="track_count_labels">
        <item quantity="one">%d Song</item>
        <item quantity="other">%d Songs</item>
    </plurals>
    <plurals name="albums_count_labels">
        <item quantity="one">%d Album</item>
        <item quantity="other">%d Albums</item>
    </plurals>
</resources>