<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/sheet_handle"
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:background="@color/surface_light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_play"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="start|center"
        android:text="@string/play"
        android:textColor="@color/white"
        app:icon="@drawable/play"
        app:iconPadding="16dp"
        app:iconSize="24dp"
        app:iconTint="@color/white"
        android:contentDescription="@string/play"
        app:layout_constraintTop_toBottomOf="@+id/sheet_handle"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_play_next"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center"
        android:text="@string/play_next"
        android:textColor="@color/white"
        app:icon="@drawable/next"
        app:iconPadding="16dp"
        app:iconSize="24dp"
        app:iconTint="@color/white"
        android:contentDescription="@string/play_next"
        app:layout_constraintTop_toBottomOf="@+id/btn_play"
        tools:layout_editor_absoluteX="16dp" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_queue_add"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center"
        android:text="@string/add_to_queue"
        android:textColor="@color/white"
        app:icon="@drawable/queue_add"
        app:iconPadding="16dp"
        app:iconSize="24dp"
        app:iconTint="@color/white"
        android:contentDescription="@string/add_to_queue"
        app:layout_constraintTop_toBottomOf="@+id/btn_play_next"
        tools:layout_editor_absoluteX="16dp" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_queue_remove"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center"
        android:text="@string/remove_from_queue"
        android:textColor="@color/white"
        android:contentDescription="@string/remove_from_queue"
        app:icon="@drawable/queue_remove"
        app:iconPadding="16dp"
        app:iconSize="24dp"
        app:iconTint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/btn_queue_add"
        tools:layout_editor_absoluteX="16dp" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_playlist_add"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center"
        android:text="@string/add_to_playlist"
        android:textColor="@color/white"
        app:icon="@drawable/playlist_add"
        app:iconPadding="16dp"
        android:contentDescription="@string/add_to_playlist"
        app:iconSize="24dp"
        app:iconTint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/btn_queue_remove"
        tools:layout_editor_absoluteX="16dp" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_playlist_remove"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center"
        android:text="@string/remove_from_playlist"
        android:textColor="@color/white"
        app:icon="@drawable/playlist_remove"
        android:contentDescription="@string/remove_from_playlist"
        app:iconPadding="16dp"
        app:iconSize="24dp"
        app:iconTint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/btn_playlist_add"
        tools:layout_editor_absoluteX="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>