<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/custom_playback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.media3.ui.DefaultTimeBar
            android:id="@+id/exo_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="4dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/exo_artwork"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="12dp"
                >

                <TextView
                    android:id="@+id/player_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_name"
                    android:textColor="#BBBBBB"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:singleLine="true"
                    />
                <TextView
                    android:id="@+id/player_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song_title"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:singleLine="true" />

            </LinearLayout>

            <TextView
                android:id="@+id/exo_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/exo_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/exo_prev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ExoStyledControls.Button.Center.Previous"
                    android:contentDescription="@string/previous"
                    />
                <ImageButton
                    android:id="@+id/exo_play_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ExoStyledControls.Button.Center.PlayPause"
                    android:contentDescription="@string/play_pause" />
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/exo_next"
                    style="@style/ExoStyledControls.Button.Center.Next"
                    android:contentDescription="@string/next"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>