<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/artist_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:padding="8dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/album_art"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/artist_name"
        android:scaleType="centerCrop"
        android:src="@drawable/default_thumbnail"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/CircularCorners" />

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/artist_name"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/album_art" />

    <TextView
        android:id="@+id/number_of_albums"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/albums"
        android:textColor="@color/off_white"
        android:textSize="11sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/artist_name" />

    <TextView
        android:id="@+id/number_of_songs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/songs"
        android:textColor="@color/off_white"
        android:textSize="11sp"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/number_of_albums" />

</androidx.constraintlayout.widget.ConstraintLayout>