<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/search_bg"
            app:queryBackground="@android:color/transparent"
            app:submitBackground="@android:color/transparent"
            app:iconifiedByDefault="false"
            app:queryHint="Search songs, artists..." />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/initView"
            style="@style/AppTabLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:tabMode="fixed" />

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/main_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintBottom_toTopOf="@+id/custom_playback"
        >

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/custom_playback"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/mini_player_bg"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/background_artwork"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:alpha="0.4"
            app:shapeAppearanceOverlay="@style/RoundedCorners"
            android:contentDescription="@string/blurred_background" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/mini_player_overlay" />


        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:paddingHorizontal="10dp"
            android:layout_marginBottom="1dp"
            android:progressBackgroundTint="@color/progress_bar_bg"
            android:progressTint="@color/accent_color"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/art_work"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:scaleType="centerCrop"
            android:src="@drawable/default_thumbnail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedCorners" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/meta_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/playback_container"
            app:layout_constraintStart_toEndOf="@+id/art_work"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/player_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:text="@string/song_title"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/player_artist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/artist_name"
                android:textColor="@color/off_white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/player_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/playback_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btn_previous"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/previous"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/previous"
                app:tint="@color/white" />

            <ImageButton
                android:id="@+id/btn_play_pause"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/play_pause"
                android:padding="4dp"
                android:scaleType="fitCenter"
                android:src="@drawable/play_with_circle"
                app:tint="@color/white" />

            <ImageButton
                android:id="@+id/btn_next"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/next"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/next"
                app:tint="@color/white" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>